@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.14) unstable; urgency=low
 
   * ajp-client: implemented request body
+  * cookie-client: obey "max-age=0" properly
 
  --
 
